// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithUnit /> by default matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH LfxJj sc-EHOje kAxTfU"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="sc-bZQynM eUbprK"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH LfxJj sc-EHOje kAxTfU"
    disabled={true}
    name="text"
    type="number"
  />
  <span
    className="sc-bZQynM gtVdVx"
    disabled={true}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with error prop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH dPobDt sc-EHOje kAxTfU"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="sc-bZQynM dZeGYZ"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with unit prop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH LfxJj sc-EHOje kAxTfU"
    disabled={false}
    name="text"
    type="number"
  >
    €
  </input>
  <span
    className="sc-bZQynM eUbprK"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with valid prop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH iyJZlp sc-EHOje kAxTfU"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="sc-bZQynM igNzjt"
    disabled={false}
  >
    λ
  </span>
</div>
`;
